# TestCGALProject

./: CGALComponents.h  CMakeLists.txt  DrawUsingQt.h  Myheader.h  QuadraticTimeClosestPair.h  main.cpp
